# dealiicourse

./: .gitignore  README.md  adaptive.tex  amandus.tex  ans.tex  assembly.pseudocode  assembly2.pseudocode  assembly3.pseudocode  assembly3a.pseudocode  beamercolorthemeclover.sty  example.tex  features.tex  fem5.tex  gallery.tex  generic_loops.tex  git.tex  intro.tex  introshort.tex  linear.pseudocode  nonlinear.pseudocode  part1.tex  part2.tex  part3.tex  post1.tex  post2.tex  post3.tex  preconditioning.tex  problems.tex  setup.tex  short.tex  slides.tex  step1.tex  step16.tex  step3.tex  step39.tex  step4.tex  step5.tex  step6.tex  step8.tex  structure.tex  (+2 more)
announce/: syllabus.tex
code/: allencahn_matrix.h  allencahn_residual.h  cell_matrix.cc  cell_matrix2.cc  class.cc  class1.cc  class2.cc  class3.cc  constraints.cc  constructor.cc  eigen-1.cc  eigen-2.cc  exmod.sh  generic_setup.cc  laplace_lambda.h  laplace_matrix.h  local_integrator.h  main.cc  matrix.cc  mgmatrix.cc  output.cc  rhs.cc  run.cc  setup.cc  solve1.cc  solve2.cc  stokes-1.cc  stokes-2.cc  vmamandus.sh  vmsetup.sh  vmsetup2.sh
exercises/: adaptive.tex  adaptive1.tex  git.tex  step1.tex  step12.tex  step16.tex  step2.tex  step3.tex  step39.tex  step4.tex
graph/: concatenation.tikz  f-cycle.tikz  structure.dot  v-cycle.tikz  vv-cycle.tikz  w-cycle.tikz
programs/: .gitignore  CMakeLists.txt  plot.gnuplot  shapes.h  shapes_dgq1.cc  shapes_q1.cc  shapes_rt0.cc  shapes_rt1.cc
tutcode/: mod-step1-2.cc  step1-1.cc  step1-2.cc  step1-3.cc  step1-3a.cc  step1-3b.cc  step1-4.cc  step1-5.cc  step1-6.cc  (+53 more)
(+4 files in other folders)
